// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design snapshot renders all items except feedback 1`] = `
<ConfigLayout
  dimensions={Object {}}
  settings={
    <Panel
      configuration={
        Object {
          "baseInputConfiguration": Object {
            "audio": Object {
              "disabled": false,
            },
            "image": Object {
              "disabled": false,
            },
            "separateParagraphs": Object {
              "disabled": true,
            },
            "showParagraphs": Object {
              "disabled": false,
            },
            "textAlign": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": false,
            },
          },
          "correctAnswer": Object {
            "label": "Correct Answers",
            "settings": true,
          },
          "feedback": Object {
            "label": "Feedback",
            "settings": false,
          },
          "highlightChoices": Object {
            "label": "Highlight choices",
            "settings": true,
          },
          "language": Object {
            "enabled": false,
            "label": "Specify Language",
            "settings": false,
          },
          "languageChoices": Object {
            "label": "Language Choices",
            "options": Array [],
          },
          "mathMlOptions": Object {
            "mmlEditing": false,
            "mmlOutput": false,
          },
          "maxImageHeight": Object {
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "maxImageWidth": Object {
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "minTokens": 2,
          "mode": Object {
            "label": "Mode",
            "settings": true,
          },
          "partialScoring": Object {
            "label": "Allow Partial Scoring",
            "settings": false,
          },
          "prompt": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Prompt",
            "required": false,
            "settings": true,
          },
          "rationale": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Rationale",
            "required": false,
            "settings": true,
          },
          "scoringType": Object {
            "label": "Scoring Type",
            "settings": false,
          },
          "selectionCount": Object {
            "label": "Selection count",
            "settings": true,
          },
          "selections": Object {
            "label": "Selections Available",
            "settings": true,
          },
          "spellCheck": Object {
            "enabled": true,
            "label": "Spellcheck",
            "settings": false,
          },
          "studentInstructions": Object {
            "label": "Student Instructions",
            "settings": false,
          },
          "teacherInstructions": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Teacher Instructions",
            "required": false,
            "settings": true,
          },
          "text": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": true,
              },
              "image": Object {
                "disabled": true,
              },
              "video": Object {
                "disabled": true,
              },
            },
            "label": "Content",
            "settings": true,
          },
          "tokens": Object {
            "label": "Tokens",
            "settings": true,
          },
          "withRubric": Object {
            "label": "Add Rubric",
            "settings": false,
          },
        }
      }
      groups={
        Object {
          "Properties": Object {
            "promptEnabled": undefined,
            "rationaleEnabled": undefined,
            "rubricEnabled": false,
            "scoringType": false,
            "spellCheckEnabled": false,
            "studentInstructionsEnabled": false,
            "teacherInstructionsEnabled": undefined,
          },
          "Settings": Object {
            "feedbackEnabled": false,
            "highlightChoices": undefined,
            "language": false,
            "language.enabled": false,
            "partialScoring": false,
          },
        }
      }
      model={
        Object {
          "tokens": Array [],
        }
      }
      onChangeModel={[Function]}
    />
  }
>
  <div>
    NEW functionality
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Switch)
          checked={false}
          onChange={[Function]}
        />
      }
      label="Select tokens"
    />
  </div>
  <Component
    label="Content"
  >
    <EditableHtml
      allowValidation={false}
      disableUnderline={true}
      languageCharactersProps={
        Array [
          Object {
            "language": "spanish",
          },
          Object {
            "language": "special",
          },
        ]
      }
      markup=""
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      nonEmpty={false}
      onChange={[Function]}
      onDone={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": true,
          },
          "separateParagraphs": Object {
            "disabled": true,
          },
          "showParagraphs": Object {
            "disabled": false,
          },
          "textAlign": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": true,
          },
        }
      }
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </Component>
</ConfigLayout>
`;

exports[`design snapshot renders all items except the content input 1`] = `
<ConfigLayout
  dimensions={Object {}}
  settings={
    <Panel
      configuration={
        Object {
          "baseInputConfiguration": Object {
            "audio": Object {
              "disabled": false,
            },
            "image": Object {
              "disabled": false,
            },
            "separateParagraphs": Object {
              "disabled": true,
            },
            "showParagraphs": Object {
              "disabled": false,
            },
            "textAlign": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": false,
            },
          },
          "correctAnswer": Object {
            "label": "Correct Answers",
            "settings": true,
          },
          "feedback": Object {
            "label": "Feedback",
            "settings": false,
          },
          "highlightChoices": Object {
            "label": "Highlight choices",
            "settings": true,
          },
          "language": Object {
            "enabled": false,
            "label": "Specify Language",
            "settings": false,
          },
          "languageChoices": Object {
            "label": "Language Choices",
            "options": Array [],
          },
          "mathMlOptions": Object {
            "mmlEditing": false,
            "mmlOutput": false,
          },
          "maxImageHeight": Object {
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "maxImageWidth": Object {
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "minTokens": 2,
          "mode": Object {
            "label": "Mode",
            "settings": true,
          },
          "partialScoring": Object {
            "label": "Allow Partial Scoring",
            "settings": false,
          },
          "prompt": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Prompt",
            "required": false,
            "settings": true,
          },
          "rationale": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Rationale",
            "required": false,
            "settings": true,
          },
          "scoringType": Object {
            "label": "Scoring Type",
            "settings": false,
          },
          "selectionCount": Object {
            "label": "Selection count",
            "settings": true,
          },
          "selections": Object {
            "label": "Selections Available",
            "settings": true,
          },
          "spellCheck": Object {
            "enabled": true,
            "label": "Spellcheck",
            "settings": false,
          },
          "studentInstructions": Object {
            "label": "Student Instructions",
            "settings": false,
          },
          "teacherInstructions": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Teacher Instructions",
            "required": false,
            "settings": true,
          },
          "text": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": true,
              },
              "image": Object {
                "disabled": true,
              },
              "video": Object {
                "disabled": true,
              },
            },
            "label": "Content",
            "settings": false,
          },
          "tokens": Object {
            "label": "Tokens",
            "settings": true,
          },
          "withRubric": Object {
            "label": "Add Rubric",
            "settings": false,
          },
        }
      }
      groups={
        Object {
          "Properties": Object {
            "promptEnabled": undefined,
            "rationaleEnabled": undefined,
            "rubricEnabled": false,
            "scoringType": false,
            "spellCheckEnabled": false,
            "studentInstructionsEnabled": false,
            "teacherInstructionsEnabled": undefined,
          },
          "Settings": Object {
            "feedbackEnabled": false,
            "highlightChoices": undefined,
            "language": false,
            "language.enabled": false,
            "partialScoring": false,
          },
        }
      }
      model={
        Object {
          "tokens": Array [],
        }
      }
      onChangeModel={[Function]}
    />
  }
>
  <div>
    NEW functionality
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Switch)
          checked={false}
          onChange={[Function]}
        />
      }
      label="Select tokens"
    />
  </div>
</ConfigLayout>
`;

exports[`design snapshot renders all items with defaultProps 1`] = `
<ConfigLayout
  dimensions={Object {}}
  settings={
    <Panel
      configuration={
        Object {
          "baseInputConfiguration": Object {
            "audio": Object {
              "disabled": false,
            },
            "image": Object {
              "disabled": false,
            },
            "separateParagraphs": Object {
              "disabled": true,
            },
            "showParagraphs": Object {
              "disabled": false,
            },
            "textAlign": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": false,
            },
          },
          "correctAnswer": Object {
            "label": "Correct Answers",
            "settings": true,
          },
          "feedback": Object {
            "label": "Feedback",
            "settings": true,
          },
          "highlightChoices": Object {
            "label": "Highlight choices",
            "settings": true,
          },
          "language": Object {
            "enabled": false,
            "label": "Specify Language",
            "settings": false,
          },
          "languageChoices": Object {
            "label": "Language Choices",
            "options": Array [],
          },
          "mathMlOptions": Object {
            "mmlEditing": false,
            "mmlOutput": false,
          },
          "maxImageHeight": Object {
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "maxImageWidth": Object {
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "minTokens": 2,
          "mode": Object {
            "label": "Mode",
            "settings": true,
          },
          "partialScoring": Object {
            "label": "Allow Partial Scoring",
            "settings": false,
          },
          "prompt": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Prompt",
            "required": false,
            "settings": true,
          },
          "rationale": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Rationale",
            "required": false,
            "settings": true,
          },
          "scoringType": Object {
            "label": "Scoring Type",
            "settings": false,
          },
          "selectionCount": Object {
            "label": "Selection count",
            "settings": true,
          },
          "selections": Object {
            "label": "Selections Available",
            "settings": true,
          },
          "spellCheck": Object {
            "enabled": true,
            "label": "Spellcheck",
            "settings": false,
          },
          "studentInstructions": Object {
            "label": "Student Instructions",
            "settings": false,
          },
          "teacherInstructions": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Teacher Instructions",
            "required": false,
            "settings": true,
          },
          "text": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": true,
              },
              "image": Object {
                "disabled": true,
              },
              "video": Object {
                "disabled": true,
              },
            },
            "label": "Content",
            "settings": true,
          },
          "tokens": Object {
            "label": "Tokens",
            "settings": true,
          },
          "withRubric": Object {
            "label": "Add Rubric",
            "settings": false,
          },
        }
      }
      groups={
        Object {
          "Properties": Object {
            "promptEnabled": undefined,
            "rationaleEnabled": undefined,
            "rubricEnabled": false,
            "scoringType": false,
            "spellCheckEnabled": false,
            "studentInstructionsEnabled": false,
            "teacherInstructionsEnabled": undefined,
          },
          "Settings": Object {
            "feedbackEnabled": undefined,
            "highlightChoices": undefined,
            "language": false,
            "language.enabled": false,
            "partialScoring": false,
          },
        }
      }
      model={
        Object {
          "tokens": Array [],
        }
      }
      onChangeModel={[Function]}
    />
  }
>
  <div>
    NEW functionality
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Switch)
          checked={false}
          onChange={[Function]}
        />
      }
      label="Select tokens"
    />
  </div>
  <Component
    label="Content"
  >
    <EditableHtml
      allowValidation={false}
      disableUnderline={true}
      languageCharactersProps={
        Array [
          Object {
            "language": "spanish",
          },
          Object {
            "language": "special",
          },
        ]
      }
      markup=""
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      nonEmpty={false}
      onChange={[Function]}
      onDone={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": true,
          },
          "separateParagraphs": Object {
            "disabled": true,
          },
          "showParagraphs": Object {
            "disabled": false,
          },
          "textAlign": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": true,
          },
        }
      }
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </Component>
</ConfigLayout>
`;

exports[`design snapshot tokenizer renders with html entities 1`] = `
<ConfigLayout
  dimensions={Object {}}
  settings={
    <Panel
      configuration={
        Object {
          "baseInputConfiguration": Object {
            "audio": Object {
              "disabled": false,
            },
            "image": Object {
              "disabled": false,
            },
            "separateParagraphs": Object {
              "disabled": true,
            },
            "showParagraphs": Object {
              "disabled": false,
            },
            "textAlign": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": false,
            },
          },
          "correctAnswer": Object {
            "label": "Correct Answers",
            "settings": true,
          },
          "feedback": Object {
            "label": "Feedback",
            "settings": true,
          },
          "highlightChoices": Object {
            "label": "Highlight choices",
            "settings": true,
          },
          "language": Object {
            "enabled": false,
            "label": "Specify Language",
            "settings": false,
          },
          "languageChoices": Object {
            "label": "Language Choices",
            "options": Array [],
          },
          "mathMlOptions": Object {
            "mmlEditing": false,
            "mmlOutput": false,
          },
          "maxImageHeight": Object {
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "maxImageWidth": Object {
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "minTokens": 2,
          "mode": Object {
            "label": "Mode",
            "settings": true,
          },
          "partialScoring": Object {
            "label": "Allow Partial Scoring",
            "settings": false,
          },
          "prompt": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Prompt",
            "required": false,
            "settings": true,
          },
          "rationale": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Rationale",
            "required": false,
            "settings": true,
          },
          "scoringType": Object {
            "label": "Scoring Type",
            "settings": false,
          },
          "selectionCount": Object {
            "label": "Selection count",
            "settings": true,
          },
          "selections": Object {
            "label": "Selections Available",
            "settings": true,
          },
          "spellCheck": Object {
            "enabled": true,
            "label": "Spellcheck",
            "settings": false,
          },
          "studentInstructions": Object {
            "label": "Student Instructions",
            "settings": false,
          },
          "teacherInstructions": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Teacher Instructions",
            "required": false,
            "settings": true,
          },
          "text": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": true,
              },
              "image": Object {
                "disabled": true,
              },
              "video": Object {
                "disabled": true,
              },
            },
            "label": "Content",
            "settings": true,
          },
          "tokens": Object {
            "label": "Tokens",
            "settings": true,
          },
          "withRubric": Object {
            "label": "Add Rubric",
            "settings": false,
          },
        }
      }
      groups={
        Object {
          "Properties": Object {
            "promptEnabled": undefined,
            "rationaleEnabled": undefined,
            "rubricEnabled": false,
            "scoringType": false,
            "spellCheckEnabled": false,
            "studentInstructionsEnabled": false,
            "teacherInstructionsEnabled": undefined,
          },
          "Settings": Object {
            "feedbackEnabled": undefined,
            "highlightChoices": undefined,
            "language": false,
            "language.enabled": false,
            "partialScoring": false,
          },
        }
      }
      model={
        Object {
          "text": "<p>&#8220;Lucy?&#63; Are you using your time wisely to plan your project?&#33;&#33;&#33;&#8221; Mr. Wilson asked.</p><p>Lucy looked a little confused at first. &#195; Then she grinned and proudly stated, &#8220;Why, yes I am! I plan to make a bird feeder for that tree out our window!&#8221;</p>",
          "tokens": Array [],
        }
      }
      onChangeModel={[Function]}
    />
  }
>
  <div>
    NEW functionality
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Switch)
          checked={false}
          onChange={[Function]}
        />
      }
      label="Select tokens"
    />
  </div>
  <Component
    label="Content"
  >
    <EditableHtml
      allowValidation={false}
      disableUnderline={true}
      languageCharactersProps={
        Array [
          Object {
            "language": "spanish",
          },
          Object {
            "language": "special",
          },
        ]
      }
      markup="<p>&#8220;Lucy?&#63; Are you using your time wisely to plan your project?&#33;&#33;&#33;&#8221; Mr. Wilson asked.</p><p>Lucy looked a little confused at first. &#195; Then she grinned and proudly stated, &#8220;Why, yes I am! I plan to make a bird feeder for that tree out our window!&#8221;</p>"
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      nonEmpty={false}
      onChange={[Function]}
      onDone={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": true,
          },
          "separateParagraphs": Object {
            "disabled": true,
          },
          "showParagraphs": Object {
            "disabled": false,
          },
          "textAlign": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": true,
          },
        }
      }
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </Component>
</ConfigLayout>
`;
